added the final chapter

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <section>
       <div class="text-center text-3xl font-bold">Program Sections</div>
       <p class="text-center">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat <br>dolor. Purus urna in sit nullam proin. </p>
-      <div class="flex gap-4 mx-auto ">
+      <div class="flex p-52 sm:p-40 gap-6 rounded ">
 
         <div class="left-hero lg:rounded"><div class="hero h-[338px] w-[573px]" style="background-image: url(./B9A3-Hockeys-main/Images/2.png);">
           <div class="hero-overlay bg-opacity-60"></div>
@@ -146,11 +146,11 @@
               <button class="btn bg-red-600 text-white border-none">Register Now!</button>
             </div>
           </div>
-        </div>></div>
+        </div></div>
       </div>
 
       <div>
-        <div class="hero w-[1170px] h-[450px]" style="background-image: url(./B9A3-Hockeys-main/Images/4.png);">
+        <div class="hero w-[1170px] h-[450px] " style="background-image: url(./B9A3-Hockeys-main/Images/4.png);">
           <div class="hero-overlay bg-opacity-60"></div>
           <div class="hero-content text-center text-neutral-content">
             <div class="max-w-md">
@@ -163,7 +163,7 @@
         </div
         </div>
     </section>
-    <section class="text-center my-24">
+    <section class="text-center my-24 p-52">
        <h2 class="text-3xl font-bold mb-5">Our New Products</h2>
       <p class="lg:max-w-3xl mb-10 mx-auto">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin.</p>
       <div class="flex gap-x-32">
@@ -293,7 +293,7 @@
            </section>
 
            <section class="p-3 my-24">
-            <h2 class="text-3xl text-center font-bold mb-5">Get In Touch</h2>
+            <h2 class="text-3xl text-center font-bold mb-5 p-52">Get In Touch</h2>
             <p class="lg:max-w-3xl mb-10 mx-auto">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin.</p>
 
             <div class="flex justify-between">
