--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <section>
       <div class="text-center text-3xl font-bold">Program Sections</div>
       <p class="text-center">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat <br>dolor. Purus urna in sit nullam proin. </p>
-      <div class="flex p-52 sm:p-40 gap-6 rounded ">
+      <div class="flex p-52  sm:p-40 gap-6 rounded ">
 
         <div class="left-hero lg:rounded"><div class="hero h-[338px] w-[573px]" style="background-image: url(./B9A3-Hockeys-main/Images/2.png);">
           <div class="hero-overlay bg-opacity-60"></div>
@@ -136,7 +136,7 @@
             </div>
           </div>
         </div></div>
-        <div class="right-hero"><div class="hero h-[338px] w-[573px]" style="background-image: url(./B9A3-Hockeys-main/Images/3.png);">
+        <div class="right-hero"><div class="hero h-[338px] w-[573px]" style="background-image:  url(./B9A3-Hockeys-main/Images/3.png);">
           <div class="hero-overlay bg-opacity-60"></div>
           <div class="hero-content text-center text-neutral-content">
             <div class="max-w-md">
@@ -293,10 +293,10 @@
            </section>
 
            <section class="p-3 my-24">
-            <h2 class="text-3xl text-center font-bold mb-5 p-52">Get In Touch</h2>
+            <h2 class="text-3xl text-center font-bold mb-5">Get In Touch</h2>
             <p class="lg:max-w-3xl mb-10 mx-auto">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin.</p>
 
-            <div class="flex justify-between">
+            <div class="flex justify-between p-52">
               <div>
                 <div class="w-1/3 bg-[#bced6e19] h-[216px] w-[374px] rounded pt-4 px-8 mb-10">
                   <img src="./B9A3-Hockeys-main/Images/Group 1171275317.png" alt="">
